# 10x-intern

./: .intern.toml  CLAUDE.md  Cargo.toml  README.md  UBIQUITOUS_LANGUAGE.md  install.sh
prompts/: feature_review.md  implement.md  plan_order.md  review.md  test_instructions.md
scaffold/: config.toml
scaffold/prompts/: feature_review.md  implement.md  plan_order.md  review.md  test_instructions.md
src/: actions.rs  behaviors.rs  cli.rs  config.rs  context.rs  lib.rs  main.rs  orchestrator.rs  process.rs  test_utils.rs  traits.rs  workflows.rs
src/actions/: agent.rs  filesystem.rs  mod.rs
src/git/: mod.rs
src/github/: client.rs  mod.rs  types.rs
src/reporter/: log_reporter.rs  mod.rs  tui_reporter.rs
src/runner/: local.rs  mod.rs
tests/: clear_test.rs  dirty_tree_test.rs  hints_test.rs  implement_test.rs  init_test.rs  orchestrator_test.rs  pr_test.rs  workspace_test.rs
tests/common/: mod.rs
