[package]
name = "intern"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
figment = { version = "0.10.19", features = ["toml"] }
inquire = "0.9.4"
log = { version = "0.4.29", features = ["release_max_level_debug"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3.27.0"
toml = "1.1.2"
